[tool.poetry]
name = "volatility-forge"
version = "1.0.0"
description = "Advanced Implied Volatility Prediction System using State-of-the-Art Deep Learning"
authors = ["Mohamed <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "config" },
    { include = "core" },
    { include = "src" },
    { include = "models" },
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
scikit-learn = "^1.3.0"
scipy = "^1.11.0"
openpyxl = "^3.1.0"
joblib = "^1.3.0"
pyyaml = "^6.0"
tqdm = "^4.66.0"
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.17.0"

# Optional deep learning frameworks
einops = "^0.7.0"
timm = "^0.9.0"

# API and serving
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
python-multipart = "^0.0.6"

# Database and caching
redis = "^5.0.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.0"

# Monitoring and logging
prometheus-client = "^0.19.0"
python-json-logger = "^2.0.7"

# Hyperparameter optimization
optuna = "^3.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.6.0"
pre-commit = "^3.5.0"
ipython = "^8.16.0"
jupyter = "^1.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.0"
sphinx-rtd-theme = "^1.3.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.scripts]
volatility-train = "scripts.train_advanced:main"
volatility-serve = "api.main:serve"
volatility-evaluate = "scripts.evaluate:main"

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src --cov=config --cov=core --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"